# LCAT

./: CMakeLists.txt  README.rst
source/CAT/: CAT_interface.cc  CAT_interface.cpp  CAT_interface.h  Cell.cpp  Cell.h  Circle.cpp  Circle.h  CircleRegression.cpp  CircleRegression.h  Clock.cpp  Clock.h  Detector.cpp  Detector.h  Legendre_function.cpp  LinearRegression.cpp  LinearRegression.h  SULTAN_interface.cpp  SULTAN_interface.h  Sequence.h  Sultan.cpp  Sultan.h  Tracked_data.h  broken_line.cpp  broken_line.h  calorimeter_hit.cc  calorimeter_hit.cpp  calorimeter_hit.h  cell.cc  cell.h  cell_base.cc  cell_base.cpp  cell_base.h  cell_couplet.cpp  cell_couplet.h  cell_triplet.cpp  cell_triplet.h  circle_base.cpp  circle_base.h  clockable.cpp  clockable.h  (+42 more)
source/CAT/CATAlgorithm/: CAT_interface.cpp  CAT_interface.h  CircleRegression.cpp  CircleRegression.h  LinearRegression.cpp  LinearRegression.h  Sequence.h  broken_line.cpp  broken_line.h  calorimeter_hit.cpp  calorimeter_hit.h  cell_base.cpp  cell_base.h  cell_couplet.cpp  cell_couplet.h  cell_triplet.cpp  cell_triplet.h  circle_base.cpp  circle_base.h  cluster.cpp  cluster.h  clusterizer.cpp  clusterizer.h  experimental_double.cpp  experimental_point.cpp  experimental_point.h  experimental_vector.cpp  experimental_vector.h  helix.h  joint.cpp  joint.h  line.cpp  line.h  node.cpp  node.h  plane.cpp  plane.h  scenario.cpp  scenario.h  sequence_base.cpp  (+7 more)
source/CAT/mybhep/: dvector.h  error.h  point.h  tstore.h
source/falaise/snemo/reconstruction/: cat_driver.cc  cat_driver.h  cat_tracker_clustering_module.cc  cat_tracker_clustering_module.h  clustering_comparison_module.cc  clustering_comparison_module.h
testing/: CMakeLists.txt  test_cat_driver.cxx  test_cat_tracker_clustering_module.cxx  test_gg_cell.cxx  utilities.cc
